--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="card">
         <div class="search">
             <input type="text" placeholder="enter a city name" spellcheck="false">
-            <button><img src="./Simple Weather App/Assets/search_crop1.jpg" alt=""></button>
+            <button><img src="./Assets/search_crop1.jpg" alt=""></button>
         </div>
         <div>
             <div class="error">
@@ -23,18 +23,18 @@
         </div>
         <div>
             <div class="weather">
-                <img src="./Simple Weather App/Assets/cloudy.jpg" class="weather-icon">
+                <img src="./Assets/cloudy.jpg" class="weather-icon">
                     <h1 class="temp">16°c</h1>
                     <h2 class="city">London</h2>
                 <div class="details">
                     <div class="col">
-                        <img src="./Simple Weather App/Assets/humidity.jpg" alt="">
+                        <img src="./Assets/humidity.jpg" alt="">
                         <div>
                             <p class="humidity">50%</p>
                             <p>Humidity</p>
                         </div>
                     </div>
-                        <img src="./Simple Weather App/Assets/windy.jpg" alt="">
+                        <img src="./Assets/windy.jpg" alt="">
                         <div>
                             <p class="windy">10 km/h</p>
                             <p>Wind Speed</p>
