--- a/index.html
+++ b/index.html
@@ -23,23 +23,25 @@
         </div>
         <div>
             <div class="weather">
-                <img src="./Assets/cloudy.jpg" class="weather-icon">
+                <img src="./Assets/cloudy.jpg" class="weather-icon" alt="weathher image" loading="lazy">
                     <h1 class="temp">16°c</h1>
                     <h2 class="city">London</h2>
                 <div class="details">
                     <div class="col">
-                        <img src="./Assets/humidity.jpg" alt="">
+                        <!-- <img src="./Assets/humidity.jpg" alt="" loading="lazy"> -->
                         <div>
                             <p class="humidity">50%</p>
                             <p>Humidity</p>
                         </div>
                     </div>
-                        <img src="./Assets/windy.jpg" alt="">
+                    <div class="col">
+                        <!-- <img src="./Assets/windy.jpg" alt="" loading="lazy"> -->
                         <div>
                             <p class="windy">10 km/h</p>
                             <p>Wind Speed</p>
                         </div>
                     </div>
+                </div>
                 </div>
             </div>
         </div>
