Improved the design and feel

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <div class="card">
         <div class="search">
-            <input type="text" placeholder="enter a city name" spellcheck="false">
-            <button><img src="./Assets/search_crop1.jpg" alt=""></button>
+            <input type="text" placeholder="Enter a city name" spellcheck="false">
+            <button><img src="./Assets/search_img.jpg" alt="search image"></button>
         </div>
         <div>
             <div class="error">
